--- a/tox.ini
+++ b/tox.ini
@@ -4,15 +4,54 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py26, py27, py33
+envlist = 
+    py26-django1.5,
+    py27-django1.5,
+    py33-django1.5,
+    py26-django1.6,
+    py27-django1.6,
+    py33-django1.6,
+
+[base]
+deps =
+    south
+    mock
+
+[django1.6]
+deps = https://www.djangoproject.com/download/1.6b4/tarball/
+    {[base]deps}
+
+[django1.5]
+deps = Django==1.5.4
+    django-discover-runner
+    {[base]deps}
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
     PYTHONWARNINGS=all
 commands = {envbindir}/django-admin.py test ebay_accounts --settings=ebay_accounts.test_settings
-deps =
-    Django>=1.5.4
-    django-discover-runner
-    south
-    mock
+
+[testenv:py26-django1.5]
+basepython = python2.6
+deps = {[django1.5]deps}
+
+[testenv:py27-django1.5]
+basepython = python2.7
+deps = {[django1.5]deps}
+
+[testenv:py33-django1.5]
+basepython = python3.3
+deps = {[django1.5]deps}
+
+[testenv:py26-django1.6]
+basepython = python2.6
+deps = {[django1.6]deps}
+
+[testenv:py27-django1.6]
+basepython = python2.7
+deps = {[django1.6]deps}
+
+[testenv:py33-django1.6]
+basepython = python3.3
+deps = {[django1.6]deps}
