--- a/tox.ini
+++ b/tox.ini
@@ -9,19 +9,26 @@ envlist =
     py33-django1.5,
     py27-django1.6,
     py33-django1.6,
+    py27-django1.7,
+    py33-django1.7,
 
 [base]
 deps =
-    south
     mock
 
+[django1.7]
+deps = Django>=1.7, <1.8
+    {[base]deps}
+
 [django1.6]
-deps = https://www.djangoproject.com/download/1.6b4/tarball/
+deps = Django>=1.6, <1.7
+    south
     {[base]deps}
 
 [django1.5]
-deps = Django==1.5.4
+deps = Django>=1.5, <1.6
     django-discover-runner
+    south
     {[base]deps}
 
 [testenv]
@@ -45,3 +52,11 @@ deps = {[django1.6]deps}
 [testenv:py33-django1.6]
 basepython = python3.3
 deps = {[django1.6]deps}
+
+[testenv:py27-django1.7]
+basepython = python2.7
+deps = {[django1.7]deps}
+
+[testenv:py33-django1.7]
+basepython = python3.3
+deps = {[django1.7]deps}
