Update tox.ini to test with django-1.8

--- a/tox.ini
+++ b/tox.ini
@@ -11,10 +11,16 @@ envlist =
     py33-django1.6,
     py27-django1.7,
     py33-django1.7,
+    py27-django1.8,
+    py33-django1.8,
 
 [base]
 deps =
     mock
+
+[django1.8]
+deps = Django>=1.8, <1.9
+    {[base]deps}
 
 [django1.7]
 deps = Django>=1.7, <1.8
@@ -60,3 +66,11 @@ deps = {[django1.7]deps}
 [testenv:py33-django1.7]
 basepython = python3.3
 deps = {[django1.7]deps}
+
+[testenv:py27-django1.8]
+basepython = python2.7
+deps = {[django1.8]deps}
+
+[testenv:py33-django1.8]
+basepython = python3.3
+deps = {[django1.8]deps}
