Update tox.ini to test with django 1.9

--- a/tox.ini
+++ b/tox.ini
@@ -13,10 +13,24 @@ envlist =
     py33-django1.7,
     py27-django1.8,
     py33-django1.8,
+    py27-django1.9,
+    py34-django1.9,
+    py35-django1.9,
+    py27-djangolatest,
+    py34-djangolatest,
+    py35-djangolatest,
 
 [base]
 deps =
     mock
+
+[djangolatest]
+deps = Django
+    {[base]deps}
+
+[django1.9]
+deps = Django>=1.9, <1.10
+    {[base]deps}
 
 [django1.8]
 deps = Django>=1.8, <1.9
@@ -74,3 +88,27 @@ deps = {[django1.8]deps}
 [testenv:py33-django1.8]
 basepython = python3.3
 deps = {[django1.8]deps}
+
+[testenv:py27-django1.9]
+basepython = python2.7
+deps = {[django1.9]deps}
+
+[testenv:py34-django1.9]
+basepython = python3.4
+deps = {[django1.9]deps}
+
+[testenv:py35-django1.9]
+basepython = python3.5
+deps = {[django1.9]deps}
+
+[testenv:py27-djangolatest]
+basepython = python2.7
+deps = {[djangolatest]deps}
+
+[testenv:py34-djangolatest]
+basepython = python3.4
+deps = {[djangolatest]deps}
+
+[testenv:py35-djangolatest]
+basepython = python3.5
+deps = {[djangolatest]deps}
