--- a/tox.ini
+++ b/tox.ini
@@ -5,28 +5,12 @@
 
 [tox]
 envlist = 
-    py27-django1.5,
-    py33-django1.5,
-    py27-django1.6,
-    py33-django1.6,
-    py27-django1.7,
-    py33-django1.7,
-    py27-django1.8,
-    py33-django1.8,
-    py27-django1.9,
-    py34-django1.9,
-    py35-django1.9,
-    py27-djangolatest,
-    py34-djangolatest,
-    py35-djangolatest,
+    django1.8,
+    django1.9,
 
 [base]
 deps =
     mock
-
-[djangolatest]
-deps = Django
-    {[base]deps}
 
 [django1.9]
 deps = Django>=1.9, <1.10
@@ -36,79 +20,14 @@ deps = Django>=1.9, <1.10
 deps = Django>=1.8, <1.9
     {[base]deps}
 
-[django1.7]
-deps = Django>=1.7, <1.8
-    {[base]deps}
-
-[django1.6]
-deps = Django>=1.6, <1.7
-    south
-    {[base]deps}
-
-[django1.5]
-deps = Django>=1.5, <1.6
-    django-discover-runner
-    south
-    {[base]deps}
-
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
     PYTHONWARNINGS=all
 commands = {envbindir}/django-admin.py test ebay_accounts --settings=ebay_accounts.test_settings
 
-[testenv:py27-django1.5]
-basepython = python2.7
-deps = {[django1.5]deps}
-
-[testenv:py33-django1.5]
-basepython = python3.3
-deps = {[django1.5]deps}
-
-[testenv:py27-django1.6]
-basepython = python2.7
-deps = {[django1.6]deps}
-
-[testenv:py33-django1.6]
-basepython = python3.3
-deps = {[django1.6]deps}
-
-[testenv:py27-django1.7]
-basepython = python2.7
-deps = {[django1.7]deps}
-
-[testenv:py33-django1.7]
-basepython = python3.3
-deps = {[django1.7]deps}
-
-[testenv:py27-django1.8]
-basepython = python2.7
+[testenv:django1.8]
 deps = {[django1.8]deps}
 
-[testenv:py33-django1.8]
-basepython = python3.3
-deps = {[django1.8]deps}
-
-[testenv:py27-django1.9]
-basepython = python2.7
+[testenv:django1.9]
 deps = {[django1.9]deps}
-
-[testenv:py34-django1.9]
-basepython = python3.4
-deps = {[django1.9]deps}
-
-[testenv:py35-django1.9]
-basepython = python3.5
-deps = {[django1.9]deps}
-
-[testenv:py27-djangolatest]
-basepython = python2.7
-deps = {[djangolatest]deps}
-
-[testenv:py34-djangolatest]
-basepython = python3.4
-deps = {[djangolatest]deps}
-
-[testenv:py35-djangolatest]
-basepython = python3.5
-deps = {[djangolatest]deps}
