Upgrade Django to 1.11

--- a/tox.ini
+++ b/tox.ini
@@ -5,15 +5,15 @@
 
 [tox]
 envlist = 
-    django1.9,
+    django1.11,
     django1.10,
 
 [base]
 deps =
     mock
 
-[django1.9]
-deps = Django>=1.9, <1.10
+[django1.11]
+deps = Django>=1.11, <1.12
     {[base]deps}
 
 [django1.10]
@@ -24,10 +24,10 @@ deps = Django>=1.10, <1.11
 setenv =
     PYTHONPATH = {toxinidir}
     PYTHONWARNINGS=all
-commands = {envbindir}/django-admin.py test ebay_accounts --settings=ebay_accounts.test_settings
+commands = {envbindir}/python -W default {envbindir}/django-admin.py test ebay_accounts --settings=ebay_accounts.test_settings
 
-[testenv:django1.9]
-deps = {[django1.9]deps}
+[testenv:django1.11]
+deps = {[django1.11]deps}
 
 [testenv:django1.10]
 deps = {[django1.10]deps}
