--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,24 @@
 language: python
-python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"
-  - "3.7"
+matrix:
+  include:
+  - python: 2.7
+    env: TOXENV=django1.10
+  - python: 3.4
+    env: TOXENV=django1.10
+  - python: 3.5
+    env: TOXENV=django1.10
+  - python: 2.7
+    env: TOXENV=django1.11
+  - python: 3.4
+    env: TOXENV=django1.11
+  - python: 3.5
+    env: TOXENV=django1.11
+  - python: 3.6
+    env: TOXENV=django1.11
+  - python: 3.7
+    dist: xenial
+    env: TOXENV=django1.11
 install:
   - pip install tox
-env:
-  - TOXENV=django1.10
-  - TOXENV=django1.11
 script:
   - tox
