--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,6 @@ language: python
 matrix:
   include:
   - python: 2.7
-    env: TOXENV=django1.10
-  - python: 3.4
-    env: TOXENV=django1.10
-  - python: 3.5
-    env: TOXENV=django1.10
-  - python: 2.7
-    env: TOXENV=django1.11
-  - python: 3.4
     env: TOXENV=django1.11
   - python: 3.5
     env: TOXENV=django1.11
@@ -18,6 +10,13 @@ matrix:
   - python: 3.7
     dist: xenial
     env: TOXENV=django1.11
+  - python: 3.5
+    env: TOXENV=django2.0
+  - python: 3.6
+    env: TOXENV=django2.0
+  - python: 3.7
+    dist: xenial
+    env: TOXENV=django2.0
 install:
   - pip install tox
 script:
