--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,17 @@
 
 [tox]
 envlist = 
+    django2.1,
     django2.0,
     django1.11,
 
 [base]
 deps =
     mock
+
+[django2.1]
+deps = Django>=2.1, <2.2
+    {[base]deps}
 
 [django2.0]
 deps = Django>=2.0, <2.1
@@ -25,6 +30,9 @@ setenv =
     PYTHONPATH = {toxinidir}
     PYTHONWARNINGS=all
 commands = {envbindir}/python -W default {envbindir}/django-admin.py test ebay_accounts --settings=ebay_accounts.test_settings
+
+[testenv:django2.1]
+deps = {[django2.1]deps}
 
 [testenv:django2.0]
 deps = {[django2.0]deps}
