Update to use Django 2.2

--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,16 @@
 
 [tox]
 envlist = 
+    django2.2,
     django2.1,
 
 [base]
 deps =
     mock
+
+[django2.2]
+deps = Django>=2.2, <2.3
+    {[base]deps}
 
 [django2.1]
 deps = Django>=2.1, <2.2
@@ -20,6 +25,9 @@ setenv =
     PYTHONPATH = {toxinidir}
     PYTHONWARNINGS=all
 commands = {envbindir}/python -W default {envbindir}/django-admin.py test ebay_accounts --settings=ebay_accounts.test_settings
+
+[testenv:django2.2]
+deps = {[django2.2]deps}
 
 [testenv:django2.1]
 deps = {[django2.1]deps}
