--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: python
 matrix:
   include:
   - python: 3.5
+    env: TOXENV=django2.2
+  - python: 3.6
+    env: TOXENV=django2.2
+  - python: 3.7
+    dist: xenial
+    env: TOXENV=django2.2
+  - python: 3.5
     env: TOXENV=django2.1
   - python: 3.6
     env: TOXENV=django2.1
