--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 matrix:
   include:
   - python: 3.5
+    dist: xenial
     env: TOXENV=django2.2
   - python: 3.6
+    dist: xenial
     env: TOXENV=django2.2
   - python: 3.7
     dist: xenial
