Add support for Django 3.0

--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,18 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = 
+envlist =
+    django3.0,
     django2.2,
     django2.1,
 
 [base]
 deps =
     mock
+
+[django3.0]
+deps = Django>=3.0, <3.1
+    {[base]deps}
 
 [django2.2]
 deps = Django>=2.2, <2.3
@@ -25,6 +30,9 @@ setenv =
     PYTHONPATH = {toxinidir}
     PYTHONWARNINGS=all
 commands = {envbindir}/python -W default {envbindir}/django-admin.py test ebay_accounts --settings=ebay_accounts.test_settings
+
+[testenv:django3.0]
+deps = {[django3.0]deps}
 
 [testenv:django2.2]
 deps = {[django2.2]deps}
