--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: python
 matrix:
   include:
+  - python: 3.6
+    dist: xenial
+    env: TOXENV=django3.0
+  - python: 3.7
+    dist: xenial
+    env: TOXENV=django3.0
+  - python: 3.8
+    dist: xenial
+    env: TOXENV=django3.0
   - python: 3.5
     dist: xenial
     env: TOXENV=django2.2
@@ -8,6 +17,9 @@ matrix:
     dist: xenial
     env: TOXENV=django2.2
   - python: 3.7
+    dist: xenial
+    env: TOXENV=django2.2
+  - python: 3.8
     dist: xenial
     env: TOXENV=django2.2
   - python: 3.5
