--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,15 @@ matrix:
   include:
   - python: 3.6
     dist: xenial
+    env: TOXENV=django3.1
+  - python: 3.7
+    dist: xenial
+    env: TOXENV=django3.1
+  - python: 3.8
+    dist: xenial
+    env: TOXENV=django3.1
+  - python: 3.6
+    dist: xenial
     env: TOXENV=django3.0
   - python: 3.7
     dist: xenial
