--- a/tox.ini
+++ b/tox.ini
@@ -5,13 +5,17 @@
 
 [tox]
 envlist =
+    django3.1,
     django3.0,
     django2.2,
     django2.1,
 
 [base]
 deps =
-    mock
+
+[django3.1]
+deps = Django>=3.1, <3.2
+    {[base]deps}
 
 [django3.0]
 deps = Django>=3.0, <3.1
@@ -30,6 +34,9 @@ setenv =
     PYTHONPATH = {toxinidir}
     PYTHONWARNINGS=all
 commands = {envbindir}/python -W default {envbindir}/django-admin.py test ebay_accounts --settings=ebay_accounts.test_settings
+
+[testenv:django3.1]
+deps = {[django3.0]deps}
 
 [testenv:django3.0]
 deps = {[django3.0]deps}
